<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Philingerie SMS</string>
	<string name="txt_version_label">Copyright ISD360 - v1.0 </string>
    
    <!-- Texte -->
    <string name="txt_none">None</string>
    <string name="txt_step_label">Etape</string>
    <string name="txt_info_label">Informations</string>
    <string name="txt_journal_label">Journal</string>
    <string name="txt_button_label">Cliquez sur une icône pour démarrer une action</string>
    <string name="txt_step_init">Initialisation des prérequis</string>
    <string name="txt_step_traitement">Envoi de la campagne SMS</string>
    <string name="txt_dowloadCsv">Télcharger fichier csv</string>
    
    <!-- Button -->
    <string name="btn_start">Démarrer la campagne</string>
    <string name="btn_quit">Quitter l\'application</string>
    <string name="btn_restart">Redémarrer la campagne</string>
    <string name="btn_stop">Stopper le traitement</string>
    <string name="btn_pause">Interrompre le traitement</string>
    <string name="btn_resume">Relancer le traitement</string>
    <string name="btn_accueil">Retourner à l\'acceuil</string>
    
    <!-- Statut -->
    <!-- Prérequis -->
    <string name="stat_reseau_label">Réseau</string>
    <string name="stat_sdcard_label">CarteSD</string>
    <string name="stat_ftpserv_label">Serveur FTP</string>
    <string name="stat_lastsent_label">Dernier envoi</string>
    
    <string name="statut_OK">[OK]</string>
    <string name="statut_KO">[KO]</string>
    
    <!-- Statut -->
    <!-- Count -->
    <string name="stat_status_count">0/0</string>
    <string name="stat_status_msg">Prêt</string>
    <string name="stat_traitement_sms_label">Traitement des envois SMS</string>
    <string name="stat_count_sms_fail_label">En échec : </string>
    <string name="stat_count_sms_sent_label">Envoyé : </string>
    <string name="stat_count_sms_global_label">Global : </string>
    
    <string name="statut_en_cours">[EN COURS]</string>
    <string name="statut_en_pause">[EN PAUSE]</string>
    <string name="statut_erreur">[ERREUR]</string>
    <string name="statut_termine">[TERMINE]</string>
    <string name="statut_count_zero">0</string>
    <string name="statut_count_zero_slash">0/0</string>
    
    <!-- Configuration files names-->
    <string name="pref_conf_ftp_srv"></string>
    <string name="pref_conf_ftp_login"></string>
    <string name="pref_conf_ftp_pass"></string>
    
</resources>