<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:orientation="vertical"
	android:background="@drawable/bar_info" >
    
    <!-- Traitement des envois -->
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >
        
        <TextView
            android:id="@+id/stat_traitement_sms_label"
	        android:layout_width="170dp"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:paddingLeft="30dp"
        	android:textSize="11dp"
        	android:textColor="@android:color/black" 
	        android:text="@string/stat_traitement_sms_label" />
        
        <TextView
            android:id="@+id/stat_traitement_sms"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:layout_alignParentRight="true"
	        android:paddingRight="30dp"
        	android:textSize="11dp"
        	android:textColor="#4C43FE" 
	        android:text="@string/statut_en_cours" />
        
	</RelativeLayout>
    
    <!-- Statut en échec -->
    <RelativeLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        
        <TextView
            android:id="@+id/stat_count_sms_fail_label"
	        android:layout_width="60dp"
	        android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginRight="20dp"
            android:gravity="right"
        	android:textSize="11dp"
        	android:textColor="@android:color/black" 
	        android:text="@string/stat_count_sms_fail_label" />
        
        <TextView
            android:id="@+id/stat_count_sms_fail"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_toRightOf="@+id/stat_count_sms_fail_label"
            android:gravity="center_horizontal"
            android:textSize="11dp"
            android:textColor="#E30000" 
            android:text="@string/statut_count_zero" />
        
    </RelativeLayout>
    
    <!-- Statut envoyé -->
    <RelativeLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >
        
        <TextView
            android:id="@+id/stat_count_sms_sent_label"
	        android:layout_width="60dp"
	        android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginRight="20dp"
            android:gravity="right"
        	android:textSize="11dp"
        	android:textColor="#4C43FE"
	        android:text="@string/stat_count_sms_sent_label" />
        
        <TextView
            android:id="@+id/stat_count_sms_sent"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_toRightOf="@+id/stat_count_sms_sent_label"
            android:gravity="center_horizontal"
            android:textSize="11dp"
            android:textColor="#4C43FE"
            android:text="@string/statut_count_zero" />
                
    </RelativeLayout>
    
    <!-- Statut global -->
    <RelativeLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_gravity="center_horizontal">
        
        <TextView
            android:id="@+id/stat_count_sms_global_label"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginRight="20dp"
            android:gravity="right"
            android:textSize="11dp"
            android:textColor="@android:color/black" 
            android:text="@string/stat_count_sms_global_label" />
        
        <TextView
            android:id="@+id/stat_count_sms_global"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_toRightOf="@+id/stat_count_sms_global_label"
            android:paddingLeft="10dp"
            android:gravity="center_horizontal"
            android:textSize="11dp"
            android:textColor="@android:color/black" 
            android:text="@string/statut_count_zero_slash" />
        
    </RelativeLayout>

</LinearLayout>