<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:orientation="vertical"
	android:background="@drawable/bar_info" >
    
    <!-- Statut Réseau -->
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView
            android:id="@+id/stat_reseau_label"
	        android:layout_width="120dp"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:paddingLeft="20dp"
        	android:textSize="11.5dp"
        	android:textColor="@android:color/black" 
	        android:text="@string/stat_reseau_label" />
        
        <TextView
            android:id="@+id/stat_reseau"
	        android:layout_width="40dp"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:layout_toRightOf="@+id/stat_reseau_label"
        	android:textSize="11.5dp"
        	android:textColor="#E30000" 
	        android:text="@string/statut_KO" />
        
        <TextView
            android:id="@+id/stat_reseau_type"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:layout_toRightOf="@+id/stat_reseau"
        	android:textSize="11.5dp"
        	android:textColor="@android:color/black" 
        	android:text="@string/txt_none"/>
        
	</RelativeLayout>
    
    <!-- Statut CarteSD -->
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <TextView
            android:id="@+id/stat_sdcard_label"
	        android:layout_width="120dp"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="1dp"
	        android:paddingLeft="20dp"
        	android:textSize="11.5dp"
        	android:textColor="@android:color/black" 
	        android:text="@string/stat_sdcard_label" />
        
        <TextView
            android:id="@+id/stat_sdcard"
	        android:layout_width="40dp"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="1dp"
	        android:layout_toRightOf="@+id/stat_sdcard_label"
        	android:textSize="11.5dp"
        	android:textColor="#E30000" 
	        android:text="@string/statut_KO" />
        
    </RelativeLayout>
    
    <!-- Statut Serveur FTP -->
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView
            android:id="@+id/stat_ftpserv_label"
	        android:layout_width="120dp"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="1dp"
	        android:paddingLeft="20dp"
        	android:textSize="11.5dp"
        	android:textColor="@android:color/black" 
	        android:text="@string/stat_ftpserv_label" />
        
        <TextView
            android:id="@+id/stat_ftpserv"
	        android:layout_width="40dp"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="1dp"
	        android:layout_toRightOf="@+id/stat_ftpserv_label"
        	android:textSize="11.5dp"
        	android:textColor="#E30000" 
	        android:text="@string/statut_KO" />
        
        <TextView
            android:id="@+id/stat_ftpserv_type"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="1dp"
	        android:layout_toRightOf="@+id/stat_ftpserv"
        	android:textSize="11.5dp"
        	android:textColor="#E30000"
        	android:text="@string/txt_none"/>
        
    </RelativeLayout>
    
    <!-- Statut Dernier envoi -->
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView
            android:id="@+id/stat_lastsent_label"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:paddingLeft="20dp"
            android:textSize="11.5dp"
            android:textColor="@android:color/black" 
            android:text="@string/stat_lastsent_label" />
        
        <TextView
            android:id="@+id/stat_lastsent"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_toRightOf="@+id/stat_lastsent_label"
            android:textSize="11.5dp"
            android:textColor="#E30000" 
            android:text="@string/statut_KO" />
        
        <TextView
            android:id="@+id/stat_lastsent_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_toRightOf="@+id/stat_lastsent"
            android:textSize="11.5dp"
            android:textColor="@android:color/black" 
            android:text="@string/txt_none"/>
        
    </RelativeLayout>

</LinearLayout>